--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -363,40 +363,46 @@
     "logout_confirm": "Are you sure you want to log out?",
     "logout_title": "Logout",
     "register": {
-      "title": "Create an account",
-      "chooseProfile": "Choose your profile",
-      "shopkeeperAccount": "Merchant Account",
-      "supplierAccount": "Supplier Account",
-      "shopkeeper": "Merchant",
-      "shopkeeperDesc": "Manage your stock, order from suppliers",
-      "supplier": "I am a Supplier",
-      "supplierDesc": "Publish your catalog, receive orders",
+      "acceptPrivacy": "I accept the",
+      "acceptTerms": "I accept the",
       "alreadyHaveAccount": "Already have an account?",
-      "changeProfile": "Change profile",
-      "name": "Name",
-      "namePlaceholder": "Your name",
-      "countryCurrency": "Country and Currency",
-      "phone": "Phone",
-      "phonePlaceholder": "77 000 00 00",
+      "backToRole": "Back",
       "businessType": "Business Type",
       "businessTypePlaceholder": "e.g., Shop, Hardware...",
-      "howDidYouHear": "How did you hear about us?",
-      "howDidYouHearPlaceholder": "e.g., Facebook, Friend...",
-      "email": "Email",
-      "password": "Password",
-      "passwordPlaceholder": "Minimum 6 characters",
+      "changeProfile": "Change profile",
+      "choosePlan": "Choose your plan",
+      "choosePlanSubtitle": "You'll test this plan during your 90-day free trial",
+      "chooseProfile": "Choose your profile",
       "confirmPassword": "Confirm password",
       "confirmPasswordPlaceholder": "Confirm your password",
-      "acceptTerms": "I accept the",
-      "acceptPrivacy": "I accept the",
+      "continueToPlan": "Continue",
+      "countryCurrency": "Country and Currency",
       "createAccount": "Create my account",
-      "selectCountry": "Select your country",
-      "searchCountry": "Search a country...",
+      "email": "Email",
       "errorFillRequired": "Please fill in all fields (name, email, password, phone)",
       "errorPasswordLength": "Password must be at least 6 characters long",
       "errorPasswordsMismatch": "Passwords do not match",
+      "errorRegister": "Registration error",
       "errorTerms": "Please accept the TOS and Privacy Policy",
-      "errorRegister": "Registration error"
+      "howDidYouHear": "How did you hear about us?",
+      "howDidYouHearPlaceholder": "e.g., Facebook, Friend...",
+      "name": "Name",
+      "namePlaceholder": "Your name",
+      "password": "Password",
+      "passwordPlaceholder": "Minimum 6 characters",
+      "phone": "Phone",
+      "phonePlaceholder": "77 000 00 00",
+      "planSelected": "Selected",
+      "searchCountry": "Search a country...",
+      "selectCountry": "Select your country",
+      "shopkeeper": "Merchant",
+      "shopkeeperAccount": "Merchant Account",
+      "shopkeeperDesc": "Manage your stock, order from suppliers",
+      "supplier": "I am a Supplier",
+      "supplierAccount": "Supplier Account",
+      "supplierDesc": "Publish your catalog, receive orders",
+      "title": "Create an account",
+      "trialNote": "90 days free • No credit card required"
     },
     "verifyPhone": {
       "title": "Verification",
@@ -1883,6 +1889,7 @@
     "iap_not_available": "In-app purchases are not available. Use Mobile Money.",
     "mm_providers": "Orange Money, Wave, MTN Money, Moov Money",
     "mobile_money_label": " (Mobile Money)",
+    "mobile_only": "Mobile app",
     "no_purchase_found": "No purchase found.",
     "pay_app_store": "Pay via App Store",
     "pay_google_play": "Pay via Google Play",
@@ -1890,6 +1897,7 @@
     "payment_failed": "Payment failed. Please try again.",
     "per_month": "/month",
     "plan_premium": "Premium",
+    "plan_pro": "Pro",
     "plan_starter": "Starter",
     "popular": "Popular",
     "premium_active_text": "Your Premium subscription is active. Thank you for your trust!",
