--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -363,40 +363,46 @@
     "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
     "logout_title": "Déconnexion",
     "register": {
-      "title": "Créer un compte",
-      "chooseProfile": "Choisissez votre profil",
-      "shopkeeperAccount": "Compte Commerçant",
-      "supplierAccount": "Compte Fournisseur",
-      "shopkeeper": "Commerçant",
-      "shopkeeperDesc": "Gerez vos stocks, commandez auprès de fournisseurs",
-      "supplier": "Fournisseur",
-      "supplierDesc": "Publiez votre catalogue, recevez des commandes",
+      "acceptPrivacy": "J'accepte la",
+      "acceptTerms": "J'accepte les",
       "alreadyHaveAccount": "Déjà un compte ?",
-      "changeProfile": "Changer de profil",
-      "name": "Nom",
-      "namePlaceholder": "Votre nom",
-      "countryCurrency": "Pays et Devise",
-      "phone": "Téléphone",
-      "phonePlaceholder": "77 000 00 00",
+      "backToRole": "Retour",
       "businessType": "Type d'activité",
       "businessTypePlaceholder": "Ex: Boutique, Quincaillerie...",
-      "howDidYouHear": "Comment nous avez-vous connus ?",
-      "howDidYouHearPlaceholder": "Ex: Facebook, Ami...",
-      "email": "Email",
-      "password": "Mot de passe",
-      "passwordPlaceholder": "Minimum 6 caractères",
+      "changeProfile": "Changer de profil",
+      "choosePlan": "Choisissez votre plan",
+      "choosePlanSubtitle": "Vous testerez ce plan pendant votre essai gratuit de 90 jours",
+      "chooseProfile": "Choisissez votre profil",
       "confirmPassword": "Confirmer le mot de passe",
       "confirmPasswordPlaceholder": "Confirmez votre mot de passe",
-      "acceptTerms": "J'accepte les",
-      "acceptPrivacy": "J'accepte la",
+      "continueToPlan": "Continuer",
+      "countryCurrency": "Pays et Devise",
       "createAccount": "Créer mon compte",
-      "selectCountry": "Sélectionner votre pays",
-      "searchCountry": "Rechercher un pays...",
+      "email": "Email",
       "errorFillRequired": "Veuillez remplir tous les champs (nom, email, mot de passe, téléphone)",
       "errorPasswordLength": "Le mot de passe doit contenir au moins 6 caractères",
       "errorPasswordsMismatch": "Les mots de passe ne correspondent pas",
+      "errorRegister": "Erreur lors de l'inscription",
       "errorTerms": "Veuillez accepter les CGU et la Politique de Confidentialité",
-      "errorRegister": "Erreur lors de l'inscription"
+      "howDidYouHear": "Comment nous avez-vous connus ?",
+      "howDidYouHearPlaceholder": "Ex: Facebook, Ami...",
+      "name": "Nom",
+      "namePlaceholder": "Votre nom",
+      "password": "Mot de passe",
+      "passwordPlaceholder": "Minimum 6 caractères",
+      "phone": "Téléphone",
+      "phonePlaceholder": "77 000 00 00",
+      "planSelected": "Sélectionné",
+      "searchCountry": "Rechercher un pays...",
+      "selectCountry": "Sélectionner votre pays",
+      "shopkeeper": "Commerçant",
+      "shopkeeperAccount": "Compte Commerçant",
+      "shopkeeperDesc": "Gerez vos stocks, commandez auprès de fournisseurs",
+      "supplier": "Fournisseur",
+      "supplierAccount": "Compte Fournisseur",
+      "supplierDesc": "Publiez votre catalogue, recevez des commandes",
+      "title": "Créer un compte",
+      "trialNote": "90 jours gratuits • Sans carte bancaire"
     },
     "verifyPhone": {
       "title": "Vérification",
@@ -1882,6 +1888,7 @@
     "iap_not_available": "Les achats in-app ne sont pas disponibles. Utilisez Mobile Money.",
     "mm_providers": "Orange Money, Wave, MTN Money, Moov Money",
     "mobile_money_label": " (Mobile Money)",
+    "mobile_only": "Application mobile",
     "no_purchase_found": "Aucun achat trouvé.",
     "pay_app_store": "Payer via App Store",
     "pay_google_play": "Payer via Google Play",
@@ -1889,6 +1896,7 @@
     "payment_failed": "Le paiement a échoué. Veuillez réessayer.",
     "per_month": "/mois",
     "plan_premium": "Premium",
+    "plan_pro": "Pro",
     "plan_starter": "Starter",
     "popular": "Populaire",
     "premium_active_text": "Votre abonnement Premium est actif. Merci de votre confiance !",
