--- a/frontend/locales/audit_result.json
+++ b/frontend/locales/audit_result.json
@@ -396,7 +396,13 @@
       "errorPasswordLength": "Password must be at least 6 characters long",
       "errorPasswordsMismatch": "Passwords do not match",
       "errorTerms": "Please accept the TOS and Privacy Policy",
-      "errorRegister": "Registration error"
+      "errorRegister": "Registration error",
+      "choosePlan": "Choose your plan",
+      "choosePlanSubtitle": "You'll test this plan during your 90-day free trial",
+      "trialNote": "90 days free • No credit card required",
+      "planSelected": "Selected",
+      "backToRole": "Back",
+      "continueToPlan": "Continue"
     },
     "verifyPhone": {
       "title": "Verification",
@@ -1885,6 +1891,7 @@
     "iap_not_available": "In-app purchases are not available. Use Mobile Money.",
     "mm_providers": "Orange Money, Wave, MTN Money, Moov Money",
     "mobile_money_label": " (Mobile Money)",
+    "mobile_only": "Mobile app",
     "no_purchase_found": "No purchase found.",
     "pay_app_store": "Pay via App Store",
     "pay_google_play": "Pay via Google Play",
@@ -1892,6 +1899,7 @@
     "payment_failed": "Payment failed. Please try again.",
     "per_month": "/month",
     "plan_premium": "Premium",
+    "plan_pro": "Pro",
     "plan_starter": "Starter",
     "popular": "Popular",
     "premium_active_text": "Your Premium subscription is active. Thank you for your trust!",
