--- a/frontend/locales/de.json
+++ b/frontend/locales/de.json
@@ -396,7 +396,13 @@
       "errorPasswordLength": "Das Passwort muss mindestens 6 Zeichen enthalten",
       "errorPasswordsMismatch": "Passwörter stimmen nicht überein",
       "errorTerms": "Bitte akzeptieren Sie die AGB und die Datenschutzrichtlinie",
-      "errorRegister": "Fehler bei der Registrierung"
+      "errorRegister": "Fehler bei der Registrierung",
+      "choosePlan": "Choose your plan",
+      "choosePlanSubtitle": "You'll test this plan during your 90-day free trial",
+      "trialNote": "90 days free • No credit card required",
+      "planSelected": "Selected",
+      "backToRole": "Back",
+      "continueToPlan": "Continue"
     },
     "verifyPhone": {
       "title": "Verifizierung",
@@ -1887,6 +1893,7 @@
     "iap_not_available": "In-App-Käufe sind nicht verfügbar. Verwenden Sie Mobile Money.",
     "mm_providers": "Orange Money, Wave, MTN Money, Moov Money",
     "mobile_money_label": " (Mobile Money)",
+    "mobile_only": "Mobile app",
     "no_purchase_found": "Kein Kauf gefunden.",
     "pay_app_store": "Über App Store zahlen",
     "pay_google_play": "Über Google Play zahlen",
@@ -1894,6 +1901,7 @@
     "payment_failed": "Die Zahlung ist fehlgeschlagen. Bitte versuchen Sie es erneut.",
     "per_month": "/Monat",
     "plan_premium": "Premium",
+    "plan_pro": "Pro",
     "plan_starter": "Starter",
     "popular": "Beliebt",
     "premium_active_text": "Ihr Premium-Abonnement ist aktiv. Vielen Dank für Ihr Vertrauen!",
