--- a/frontend/locales/ff.json
+++ b/frontend/locales/ff.json
@@ -396,7 +396,13 @@
       "errorPasswordLength": "Finnde ndee war na am 6 karactèr",
       "errorPasswordsMismatch": "Passwords do not match",
       "errorTerms": "Tiiɗno jaɓo Sarɗiiji Kuuɓtuɗi e Sutura",
-      "errorRegister": "Njuumte e winnditagol"
+      "errorRegister": "Njuumte e winnditagol",
+      "choosePlan": "Choose your plan",
+      "choosePlanSubtitle": "You'll test this plan during your 90-day free trial",
+      "trialNote": "90 days free • No credit card required",
+      "planSelected": "Selected",
+      "backToRole": "Back",
+      "continueToPlan": "Continue"
     },
     "verifyPhone": {
       "title": "Verification",
@@ -1887,6 +1893,7 @@
     "iap_not_available": "Soode e nder jaaynde ɗee heɓaani. Huutoro Mobile Money.",
     "mm_providers": "Orange Money, Wave, MTN Money, Moov Money",
     "mobile_money_label": " (Mobile Money)",
+    "mobile_only": "Mobile app",
     "no_purchase_found": "Alaa soodu ndu njiytaa.",
     "pay_app_store": "Yiytoo e App Store",
     "pay_google_play": "Yiytoo e Google Play",
@@ -1894,6 +1901,7 @@
     "payment_failed": "Yiytugol ronkaama. Eeltu kadi.",
     "per_month": "/lewru",
     "plan_premium": "Premium",
+    "plan_pro": "Pro",
     "plan_starter": "Starter",
     "popular": "Famɗi heen",
     "premium_active_text": "Yaajgol maa Premium ko doxii. Jaaraama e goonga maa!",
