--- a/frontend/locales/ro.json
+++ b/frontend/locales/ro.json
@@ -396,7 +396,13 @@
       "errorPasswordLength": "Password must be at least 6 characters long",
       "errorPasswordsMismatch": "Passwords do not match",
       "errorTerms": "Please accept the TOS and Privacy Policy",
-      "errorRegister": "Registration error"
+      "errorRegister": "Registration error",
+      "choosePlan": "Choose your plan",
+      "choosePlanSubtitle": "You'll test this plan during your 90-day free trial",
+      "trialNote": "90 days free • No credit card required",
+      "planSelected": "Selected",
+      "backToRole": "Back",
+      "continueToPlan": "Continue"
     },
     "verifyPhone": {
       "title": "Verification",
@@ -1887,6 +1893,7 @@
     "iap_not_available": "Achizițiile în aplicație nu sunt disponibile. Folosiți Mobile Money.",
     "mm_providers": "Orange Money, Wave, MTN Money, Moov Money",
     "mobile_money_label": " (Mobile Money)",
+    "mobile_only": "Mobile app",
     "no_purchase_found": "Nicio achiziție găsită.",
     "pay_app_store": "Plată prin App Store",
     "pay_google_play": "Plată prin Google Play",
@@ -1894,6 +1901,7 @@
     "payment_failed": "Plata a eșuat. Vă rugăm să încercați din nou.",
     "per_month": "/lună",
     "plan_premium": "Premium",
+    "plan_pro": "Pro",
     "plan_starter": "Starter",
     "popular": "Popular",
     "premium_active_text": "Abonamentul dvs. Premium este activ. Vă mulțumim pentru încredere!",
